...
                    android:layout_weight="1"
                    android:text="Log in" />

            </LinearLayout>

            <Button
                android:id="@+id/btnLoginMoveToRegis"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
...
